# MIDITools

./: MIDI Message Table 1  README.md  arduino midi  fishman.py  listmidi.c  midi.c  midicardnames.c  midiecho.c  rawmidi.c  velconvert_ncurses.cpp
alsatest1/: mainwindow.cpp  mainwindow.h  mainwindow.ui
cuteMIDI/: cuteMIDI.pro  mainwindow.cpp  mainwindow.ui
cuteMIDI/src/: alsarawportlist.c  midiecho.c
cuteRTMIDI/: cuteMIDI.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
cuteRTMIDI2/: cuteMIDI.pro
dev/: alsarawmidiout.c
drums/: DIYArduinoDrumsMicrophone  aha.py  mididrums.blend  sf2.py
drums/drums/: drums.py
guitar2midi1/: makefile
guitar2midi2/: example.cbp
midiball-v0/: Makefile  ball.cpp  ball.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  midi_in.cpp  midi_in.h  midiball.pro
qCOW/: cuteMIDI.pro  mainwindow.cpp  mainwindow.h  pianokeybd.h  pianoscene.cpp  pianoscene.h
qFluidlite/: Makefile
qmidiroute-0.4.0/: Makefile  config.status
raton_v0.22-mouse-midi/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  config.h.in  configure  configure.in  raton.glade  raton.gladep
raton_v0.22-mouse-midi/autom4te.cache/: output.0  requests  traces.0  traces.1
raton_v0.22-mouse-midi/src/: Makefile.am  Makefile.in  callbacks.c  callbacks.h  interface.c  interface.h  main.c  midicontrol.c  midicontrol.h
superboucleQT/: mainwindow.cpp  mainwindow.ui
vmpk-0.5.1-mod/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  cmake_install.cmake  cmake_uninstall.cmake  vmpk.pro  vmpk.spec
vmpk-0.5.1-mod/man/: Makefile  (+1 more)
(+87 files in other folders)
