dnl Process this file with autoconf to produce a configure script.

AC_INIT(configure.in)
AM_INIT_AUTOMAKE(raton, 0.1)
AM_CONFIG_HEADER(config.h)
AM_MAINTAINER_MODE

AC_ISC_POSIX
AC_PROG_CC
AM_PROG_CC_STDC
AC_HEADER_STDC

pkg_modules="gtk+-2.0 >= 2.4.0"
PKG_CHECK_MODULES(PACKAGE, [$pkg_modules])
AC_SUBST(PACKAGE_CFLAGS)
AC_SUBST(PACKAGE_LIBS)

AC_CHECK_LIB(asound, snd_seq_event_output_direct,alsalib=yes,alsalib=no)
AC_CHECK_HEADERS(alsa/asoundlib.h,alsaheader=yes,alsaheader=no)

if test "$alsalib" = "yes"; then
	if test "$alsaheader" = "yes"; then
		LIBS="$LIBS -lasound -lm"
	else 
	    AC_MSG_ERROR([** Coulnd't find ALSA header file sys/asoundlib.h **])
    fi
else
    AC_MSG_ERROR([** Couldn't find ALSA library libasound. **])
fi

AC_OUTPUT([
Makefile
src/Makefile
])

